--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "isomorphic-unfetch": "^4.0.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-table": "^7.8.0"
+    "react-select": "^5.8.0",
+    "react-table": "^7.8.0",
+    "react-webcam": "^7.2.0"
   },
   "devDependencies": {
     "postcss": "^8",
